Fix z-index naming change

--- a/components/src/global-header/global-header.scss
+++ b/components/src/global-header/global-header.scss
@@ -42,7 +42,7 @@
 
 .wsu-g-header__logo-icon {
 	position: relative;
-	z-index: z('site-header');
+	z-index: z('header');
 
 	justify-content: center;
 
